src/style.css
@media screen and (max-width: 767px) {
  input,
  #search {
    font-size: 16px;
  }
}
@font-face {
  font-family: 'Raleway';
  src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
  font-weight: 500;
  font-style: medium;
}
@font-face {
  font-family: 'Raleway';
  src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
  font-weight: 600;
  font-style: semibold;
}
@font-face {
  font-family: 'Raleway';
  src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
  font-weight: 700;
  font-style: bold;
}
html {
  min-height: 100%;
  margin: 0;
}
body {
  margin: 0;
  min-height: 100%;
  text-align: center;
}
:root {
  --sidePaddings: 1.5rem;
  --middleGap: 4rem;
  /* tries to adapt to screen sizes*/
  --fontSize: calc(0.5rem + 0.2vw + 1vh);
  --fontSizeSemiHighlight: 1.5rem;
  --fontSizeHighlight: 2rem;
  --containerRadius: 1rem;
  --topSectionsWidth: 20vw;
  --topSectionsHeight: 40vh;
  --topSectionsWidthMobile: 35vw;
  --topSectionsHeightMobile: 45vh;
}
button {
  background: inherit;
}
svg {
  width: 2rem;
  height: 2rem;
  fill: rgb(110, 35, 223);
}

/* PC */
@media screen and (min-width: 801px) {
  .highlight,
  .currentWeather {
    min-width: var(--topSectionsWidth);
    min-height: var(--topSectionsHeight);
  }
  .current {
    justify-content: space-evenly;
    gap: 1rem;
  }
}

/* mobile */
@media screen and (min-width: 300px) and (max-width: 800px) {
  .currentWeather,
  .highlight {
    min-width: var(--topSectionsWidthMobile);
    min-height: var(--topSectionsHeightMobile);
  }
  .alerts {
    max-width: calc(var(--topSectionsWidthMobile) * 2);
  }
  .current {
    justify-content: center;
    gap: 0.5rem;
  }
}

/*Spaces weather infos*/
.current {
  display: flex;
  align-items: center;
  padding: var(--sidePaddings);
}
.highlight {
  display: flex;
  flex-direction: column;
  align-content: space-between;
  justify-content: center;
  gap: 0.7rem;
}
.currentWeather {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
}
.main {
  display: flex;
  flex-direction: column;
  max-height: 100%;
  font-size: var(--fontSize);
  font-family: 'Raleway', sans-serif;
  font-weight: 500;
  font-style: medium;
  padding: 1rem;
}
.daily {
  display: grid;
  align-items: center;
  justify-items: center;
  justify-content: center;
  grid-template-columns: repeat(auto-fit, clamp(350px, 400px, 40vw));
  grid-template-rows: repeat(auto, 1fr);
  padding: 1rem;
  gap: 1rem;
}
.dayContainer {
  display: flex;
  flex-direction: column;
  align-items: space-between;
  justify-content: center;
  gap: 0.5rem;
  width: 18rem;
  height: 12rem;
  padding: 1rem;
}
/*  SVG */
/* targets forecast SVGs */
.dayDate ~ div > svg > svg,
.maxTempSvg > svg,
.minTempSvg > svg {
  min-width: 1.7rem;
  max-width: 1.7rem;
  height: 100%;
}

/* Right side divs */
.currentWeather > *,
.weatherSummary > *,
.dayContainer > *,
.searchContainer > * {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
}
.rain1hCont,
.snow1hCont,
.currentSvg {
  display: none;
  justify-content: flex-end;
}

/*Current weather/search area */
/* centers itself despite of other flex settings */
.feelsLike,
.date,
.name,
.time {
  align-self: center;
}
.alerts {
  padding: 1rem;
  border-radius: var(--containerRadius);
  max-width: calc(var(--topSectionsWidth) * 2);
  align-self: center;
}
.searchContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  height: 8vh;
}
.searchArea {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  padding: 1rem;
  border-radius: var(--containerRadius);
}
#search {
  all: unset;
  padding: 0.4rem;
  height: 1.3rem;
  border-radius: 0.5rem;
}
.weatherCont,
.tempContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: var(--fontSizeSemiHighlight);
}
.name {
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  font-size: var(--fontSizeHighlight);
}
.date {
  font-family: 'Raleway', sans-serif;
  font-weight: 600;
  font-size: var(--fontSizeHighlight);
}
.feelsLike {
  font-style: italic;
  font-size: 1rem;
}
/*daily forecast */
.dayDate {
  align-self: center;
}
/* trick to appear centralized */
.minTempSvg,
.maxTempSvg {
  margin-left: 0.15rem;
}

/* wind adjusts */
.windData,
.rainData,
.snowData {
  display: flex;
  flex-direction: column;
}
.windSpeed {
  align-self: flex-end;
}
.rain1hCont {
  align-items: space-between;
}

/* containers opacity background */
main > section > section,
.dayContainer {
  border-radius: var(--containerRadius);
  padding: 1.2rem;
}

/* high specificity */
.dayContainer > * {
  align-items: flex-start;
}
.forecastItemContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  gap: 0.5rem;
}

